# VkNoon

./: .gitignore  CMakeLists.txt  README.md
CMake/: CMakePolicies.cmake  CompileShaderList.cmake  ConfigureFileList.cmake  GetRuntimeDir.cmake
Demos/: CMakeLists.txt
Demos/HelloWorld/: CMakeLists.txt
Demos/HelloWorld/Private/: HelloWorldApplication.cpp  HelloWorldApplication.hpp  Main.cpp
Engine/: CMakeLists.txt
Engine/Asset/Shader/: ColorSpace.inc.glsl  Default.frag.glsl  Default.vert.glsl  Globals.inc.glsl  Material.inc.glsl  Math.inc.glsl  TBN.inc.glsl  Transform.inc.glsl  VertexAttributes.inc.glsl
Engine/Private/: Application.cpp  Buffer.cpp  GraphicsDriver.cpp  Log.cpp  Noon.cpp  Path.cpp  String.cpp  VkNoon.cpp  vulkan.c
Engine/Public/: vk_mem_alloc.h
Engine/Public/Noon/: Application.hpp  Buffer.hpp  Config.hpp.in  Containers.hpp  Exception.hpp  GraphicsDriver.hpp  Log.hpp  Macros.hpp  Math.hpp  Noon.hpp  Path.hpp  Platform.hpp  ShaderGlobals.hpp  ShaderTransform.hpp  String.hpp  Version.hpp
Engine/Public/VkNoon/: Config.hpp.in  Platform.hpp  VkNoon.hpp
Engine/Public/glad/: vulkan.h
Scripts/: generate-launch-targets.py
